src/app/snapshots/jiq__app__render__snapshot_tests__snapshot_ui_error_overlay_visible.snap
---
source: src/app/render.rs
expression: output
---
"┌ ⚠ Syntax Error (last successful query result) ───────────────────────────────┐"
"│{                                                                             │"
"│  "test": true                                                                │"
"│}                                                                             │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│ ┌ Syntax Error (Ctrl+E to close) ──────────────────────────────────────────┐ │"
"│ │jq: error: syntax error, unexpected end of file at <top-level>, line 1, co│ │"
"│ │    .invalid[                                                             │ │"
"│ │            ^                                                             │ │"
"│ │jq: 1 compile error                                                       │ │"
"│ └──────────────────────────────────────────────────────────────────────────┘ │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Query [INSERT] ⚠ Syntax Error (Ctrl+E to view)───────────────────────────────┐"
"│.invalid[                                                                     │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" F1: Help | Shift+Tab: Switch Focus | Enter: Exit with Results | Ctrl+Q: Exit wi"
