src/app/snapshots/jiq__app__render__snapshot_tests__snapshot_ui_small_terminal.snap
---
source: src/app/render.rs
expression: output
---
"┌ Results ─────────────────────────────┐"
"│{                                     │"
"│  "name": "Alice"                     │"
"│}                                     │"
"│                                      │"
"└──────────────────────────────────────┘"
"┌ Query [INSERT] ──────────────────────┐"
"│                                      │"
"└──────────────────────────────────────┘"
" F1: Help | Shift+Tab: Switch Focus | En"
